Fix cart page on mobile

--- a/src/styles/Cart.scss
+++ b/src/styles/Cart.scss
@@ -16,13 +16,20 @@
   .cart-items {
     @include flexCenter(column);
     gap: 2rem;
+    padding: 0;
 
     .cart-item {
       display: grid;
       grid-template-columns: 1fr 3fr 3rem;
+      justify-items: center;
       align-items: center;
       gap: 1rem;
       width: 500px;
+
+      @media (max-width: 45rem) {
+        width: 300px;
+        grid-template-columns: 1fr 2fr 1rem;
+      }
 
       .item-title {
         overflow: hidden;
@@ -65,6 +72,7 @@
   .checkout {
     @include flexCenter(column);
     text-align: center;
+    margin-top: auto;
     gap: 1rem;
 
     .btns {
